[MCM-309] fixed backbutton (which was somehow hidden by the map)

--- a/src/pages/home/tabs/TasksMap/TasksMap.scss
+++ b/src/pages/home/tabs/TasksMap/TasksMap.scss
@@ -1,4 +1,7 @@
 page-tasks-map {
+    ion-content{
+        z-index: -1;
+    }
     .map .detail-box {
         &#ranking{
             bottom: auto;
